# actix-cfwks-subconverter-toml

./: .gitignore  Cargo.toml  config.toml  使用说明.txt
Test/: 01.rs  02.rs
data/: locations.json  result.csv  result1.csv  使用CloudflareST测试延迟.bat
data/相关程序的备份/2_ipspeedtest/: ip.txt  使用ipspeedtest测试延迟.bat  使用ipspeedtest测试延迟和速度.bat
src/: main.rs
src/utils/: clash.rs  common.rs  data.rs  file_data.rs  indent.rs  mod.rs  net_data.rs  qrcode.rs  singbox.rs  toml.rs  v2ray.rs
template/: clash.yaml  sing-box.json
